# FileSystem

./: Cargo.toml  DEMO_COMPLETION_AUDIT.md  DEMO_STATUS.md  SYSTEM_MAP.md  readme.md
architecture/: cache_system.md  concurrency_model.md  crash_recovery.md  delete_flow.md  disk_layout_design.txt  fail_possiblilities.txt  garbage_collection.md  indexing_system.md  metadata_design.md  module_interfaces.md  object_store_design.md  project_struture  read_flow.md  scaling_model.md  security_model.md  staging_system.md  system-design.txt  system_contracts.md  system_overview.md  tech-stack.txt  write_flow.md
cache/: Cargo.toml
cache/src/: lib.rs
chunk_store/: Cargo.toml
chunk_store/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
fuse/: Cargo.toml
fuse/examples/: fuse_api_demo.rs  fuse_daemon_demo.rs
fuse/src/: demo_config.rs  lib.rs
gc/: Cargo.toml
gc/src/: lib.rs
metadata/: Cargo.toml
metadata/src/: hooks.rs  lib.rs  sqlite.rs
path_resolver/: Cargo.toml
path_resolver/src/: lib.rs
scripts/: demo.sh
staging/: Cargo.toml
staging/src/: lib.rs
tmp/: demo-summary.json
wal/: Cargo.toml  README.md
wal/src/: error.rs  lib.rs  log.rs  pipeline.rs  recovery.rs  types.rs
