[package]
name = "fs_core"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
cache = { path = "../cache" }
gc = { path = "../gc" }
metadata = { path = "../metadata" }
staging = { path = "../staging" }
thiserror = "1"
wal = { path = "../wal" }

[dev-dependencies]
chunk_store = { path = "../chunk_store" }
tempfile = "3"
